<resources>
    <string name="app_name">Evrybo.com</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fabric_fragment">Fabric</string>
    <string name="design_fragment">Design</string>
    <string name="date">Date</string>
    <string name="availability">Availability</string>
    <string name="code">Code</string>
    <string name="vendor">Vendor</string>
    <string name="type">Type</string>
    <string name="todo">TODO</string>
</resources>
